# vcr

./: .ghci  .gitlab-ci.yml  .hlint.yaml  CHANGELOG.md  DEVELOPMENT.md  README.md  TESTS.md  app.nix  authenticate-oauth.nix  default.nix  generated.nix  hslogger-1.2.11.nix  lib.nix  nixpkgs.json  release.nix  release0.nix  release1.nix  remarks.txt  shell.nix  text-format.nix  vcr-app.cabal  vcr.cabal  wxc.nix  wxcore.nix
app/: CmdCapture.hs  CmdCat.hs  CmdConfigurator.hs  CmdCustom.hs  CmdServer.hs  CmdTestGenerator.hs  CmdTestReceiver.hs  Main.hs
doc/: database.markdown  system-requirements.md  tests.md  webapi.markdown
examples/: capture-config.json  configurator.hs  replay.hs
lib/: Common.hs  Configurator.hs  Event.hs  File.hs  Logging.hs  Replay.hs  Sequential.hs  Streaming.hs  TH.hs  Time.hs  Udp.hs  Vcr.hs  default.nix  vcr.cabal
lib/Capture/: Types.hs
lib/Data/ReactiveValue/: Extended.hs
lib/Graphics/UI/WX/Reactive/: Extended.hs
lib/Replay/: Controller.hs  Engine.hs  Types.hs
lib/Replay/View/: Wx.hs
lib/Streaming/: Disk.hs  Http.hs
lib/test/: DiskTest.hs  Main.hs  TestCommon.hs  VcrTest.hs
nix/: README.md  deseo.nix  keera-hails-reactive-cbmvar.nix  keera-hails-reactive-wx.nix  modern-uri.nix  req.nix  sources.json  wx.nix  wxdirect.nix
nix/extra/: deseo.nix  ekg-json.nix  ekg.nix  keera-hails-mvc-view.nix  keera-hails-reactivevalues.nix  keera-hails.json  wxHaskell.json  wxcore.nix
other/: Paths_vcr.hs
replay/: example.hs
scripts/: vcr-custom.sh
src/: Action.hs  Buffer.hs  CmdArchive.hs  CmdCapture.hs  CmdConfig.hs  CmdHousekeep.hs  CmdRecord.hs  CmdRecorder.hs  CmdReplay.hs  CmdServe.hs  CmdServer.hs  Common.hs  Config.hs  Database.hs  Datagram.hs  Encodings.hs  Event.hs  File.hs  IO.hs  Main.hs  Process.hs  Server.hs  Streams.hs  Types.hs  Udp.hs  test.hs
test/: DiskTest.hs  Main.hs  TestCommon.hs  VcrTest.hs  testcases
test-tools/: generator.hs  receiver.hs
tests/: Main.hs  TestCmdArchive.hs  TestDatabase.hs  TestEncodings.hs  TestEvent.hs  TestPipes.hs  TestStreams.hs  test.hs
vcr-app/: CmdCapture.hs  CmdCat.hs  CmdCustom.hs  CmdServer.hs  Main.hs
