cabal-version:      3.0
name:               vcr
version:            2.0.1
synopsis:           UDP datagram recorder and replay
-- description:
homepage:           https://github.com/zoranbosnjak/vcr
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Zoran Bošnjak
maintainer:         zoran.bosnjak@via.si
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common baseopt
    ghc-options:
        -Wall
        -Wincomplete-uni-patterns
        -Wincomplete-record-updates
        -Wcompat
        -Widentities
        -Wredundant-constraints
        -Wunused-packages
    default-language:
        GHC2021

common basedep
    build-depends:
        base < 5
        , unliftio
        , optparse-applicative
        , bytestring
        , text
        , containers
        , network
        , network-multicast
        , stm
        , transformers
        , aeson
        , pipes
        , pipes-safe
        , http-types

library
    import:           baseopt, basedep
    exposed-modules:
        TH
        , Vcr
        , Common
        , Sequential
        , Time
        , Udp
        , Logging
        , Streaming
        , Streaming.Disk
        , Streaming.Http
        , Data.ReactiveValue.Extended
        , Graphics.UI.WX.Reactive.Extended
        , Replay
        , Replay.Controller
        , Replay.Engine
        , Replay.Types
        , Replay.View.Wx
        , Capture.Types
        , Configurator
    build-depends:
        template-haskell
        , microlens-platform
        , filepath
        , aeson-pretty
        , exceptions
        , base16-bytestring
        , http-client
        , http-client-tls
        , time
        , clock
        , vector
        , directory
        , megaparsec
        , hslogger
        , QuickCheck
        , wx
        , wxcore
        , keera-callbacks
        , keera-hails-reactive-cbmvar
        , keera-hails-reactivevalues
        , keera-hails-reactive-wx
    hs-source-dirs:   lib

executable vcr
    import:           baseopt, basedep
    ghc-options:
        -O2 -rtsopts -funbox-strict-fields -with-rtsopts=-T -threaded
    main-is:          Main.hs
    other-modules:
        Paths_vcr
      , CmdCapture
      , CmdConfigurator
      , CmdCat
      , CmdServer
      , CmdTestGenerator
      , CmdTestReceiver
    build-depends:
        vcr
        , unix
        , ekg
        , uuid
        , wai
        , warp
    hs-source-dirs:   app
    default-language: GHC2021

test-suite vcr-test
    import:           baseopt
    default-language: GHC2021
    other-modules:
        TestCommon
        , DiskTest
        , VcrTest
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
          base
        , vcr
        , temporary
        , aeson
        , filepath
        , time
        , text
        , bytestring
        , exceptions
        , random
        , pipes
        , pipes-safe
        , tasty
        , tasty-quickcheck
        , tasty-hunit

